# tpm2-tcti-uefi

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-xenial  INSTALL.md  MAINTAINERS  Makefile.am  README.md  RELEASE.md  bootstrap  build.sh  configure.ac
.ci/: Dockerfile-jammy  Dockerfile-xenial  build-deps.sh  target-ovmf-debug-x64-gcc.txt  tss2-sys_config.site
docs/: example.md  test.md
example/: compat.c  compat.h  get-capability.c  run.sh  startup.nsh  tcg2-get-caps.c  tcg2-get-eventlog.c  tcg2-get-pcr-banks.c  tpm2-get-capability.c  tpm2-get-caps-fixed.c  tpm2-get-pcrs.c  tpm2-nv-ops.c  tss2-mu-uint32.c  tss2-util.c  tss2-util.h  util.c  util.h
lib/: efi-test-setup.sh  qemu-tpm2.sh  startup.nsh.template  swtpm2.sh  tss2-sys_build.sh  tss2-sys_config.site
src/: compat.c  hello.c  tcg2-protocol.h  tcg2-util.c  tcg2-util.h  tcti-init.c  tcti-send-buf.c  tcti-uefi.c  tcti-uefi.h  tpm2-get-capability.c  tss2-tcti-uefi.h  tss2-util.c  tss2-util.h  uefi-types.h
test/: example-util_unit.c  hello-world.c  tcg2-util_unit.c  tcti-uefi-cast_unit.c  tcti-uefi-finalize_unit.c  tcti-uefi-init_unit.c  tcti-uefi-receive_unit.c  tcti-uefi-transmit_unit.c  tcti-uefi-wraps.c  tcti-uefi-wraps.h  tss2-getrandom.c  tss2-mu-uint32.c
